Fixed typo + updated example yml file

--- a/awsvpnclient.yml.example
+++ b/awsvpnclient.yml.example
@@ -1,9 +1,10 @@
+debug: false                            # Prints useful debugging information
+browser: false                          # Opens the web browser for auth step. Works a little wonky on some distros.
 vpn:
-  openvpn: /home/myname/aws-vpn-client/openvpn
-  port: 1194
-  shell: /bin/sh
-  sudo: /usr/bin/sudo
-  shellargs:
+  openvpn: {path to your openvpn_aws}   # Path to openvpn_aws binary.                        
+  sudo: /bin/sudo                       # Sudo command to run when establishing a tunnel to AWS.    (default is fine for most distros)
+  shell: /bin/sh                        # bash/shell command when establishing a tunnel to AWS.     (default is fine for most distros)
+  shellargs:                            # bash/shell commands to add when executing shell commands. (default is fine for sh)
     - "-c"
 server:
-  addr: "127.0.0.1:35001"
+  addr: "127.0.0.1:35001"              # SAML Server listen address after auth redirect. (default is fine for most setups)
